--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,15 +1,46 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
-
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
+
 body {
     font-family: 'Roboto Slab', serif;
     @apply bg-gray-100 min-h-full;
 }
+//elements
 div {
   @apply block;
 }
+h1 {
+  @apply font-semibold text-5xl m-5;
+}
+h2 {
+  @apply font-semibold text-3xl m-3;
+}
+h3 {
+  @apply font-semibold text-2xl;
+}
+h4 {
+  @apply font-semibold text-xl;
+}
+p {
+  @apply text-xl mb-2 max-w-xs;
+}
+hr {
+  @apply m-2;
+}
+a {
+  @apply underline text-indigo-500;
+}
+a:visited {
+  @apply text-indigo-600;
+}
+ nav a {
+   @apply no-underline
+ }
+ nav a:visited {
+   @apply text-indigo-200;
+ }
 .body-container {
   @apply  h-screen grid;
   grid-template-rows: auto 1fr auto;
@@ -26,28 +57,44 @@ div {
 .section-container {
   @apply flex justify-center;
 }
-h1 {
-  @apply font-semibold text-5xl m-5;
-}
-h2 {
-  @apply font-semibold text-3xl m-3;
-}
-p {
-  @apply text-xl mb-2 max-w-xs;
-}
-hr {
-  @apply m-2;
-}
 .svg-logo {
   max-width: 100%;
   height: 15rem;
 }
+.career-card {
+  @apply shadow-lg p-4 w-full;
+}
+.career-card .main-career {
+  @apply flex flex-col;
+}
+.career-card p {
+  @apply mx-auto;
+}
+.sub .career-card {
+  @apply mt-2 px-4;
+}
+.career-card picture {
+  @apply block flex justify-center items-center mx-4 bg-indigo-100 rounded-lg p-4 shadow h-64;
+}
+.sub .career-card picture {
+  @apply h-auto;
+}
 @screen sm {
   p {
     @apply max-w-sm;
+  }  
+  .career-card .main-career {
+    @apply flex-row;
+  }
+  .sub  {
+    @apply mr-24 w-full;
+  }
+  .career-card > picture {
+    @apply w-1/3;
   }
 }
 @screen md {
+  
   .article-container {
     @apply pl-16 pr-16;
   }
@@ -59,13 +106,16 @@ hr {
   }
 }
 
-@screen lg {
+@screen lg {  
   p {
     @apply max-w-2xl;
   }
 }
 
 @screen xl {
+  .career-card {
+    @apply px-32 m-4;
+  }
   p {
     @apply max-w-4xl;
   }
