added content to the company page

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -82,6 +82,10 @@ a:visited {
 .sub .career-card picture {
   @apply h-auto;
 }
+.company-logo {
+  max-height: 24rem;
+}
+
 @screen sm {
   p {
     @apply max-w-sm;
