--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -73,7 +73,7 @@ a:visited.text-white{
    @apply text-left list-decimal ml-6 my-4 text-xl;
  }
  pre {
-   @apply text-left;
+   @apply text-left overflow-auto max-w-xs;
  }
 .body-container {
   @apply  h-screen grid;
@@ -145,15 +145,24 @@ a:visited.text-white{
   .career-card > picture {
     @apply w-1/3;
   }
+  pre {
+    @apply max-w-sm;
+  }
+  .article-container {
+    @apply max-w-sm;
+  }
 }
 @screen md {
   .article-container {
-    @apply pl-16 pr-16;
+    @apply pl-16 pr-16 max-w-2xl;
   }
   h1 {
     @apply text-4xl;
   }
   p {
+    @apply max-w-none;
+  }
+  pre {
     @apply max-w-none;
   }
 }
@@ -163,7 +172,7 @@ a:visited.text-white{
     @apply max-w-none;
   }
   .article-container {
-    @apply max-w-2xl;
+    @apply max-w-4xl;
   }
 }
 
