fixed some styling for tables

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -76,18 +76,32 @@ a:visited.text-white{
    @apply text-left overflow-auto max-w-xs;
  }
  table {
-   @apply table-auto block border-collapse w-full overflow-x-scroll max-w-xs;
+   @apply table-fixed table border-collapse;
+   font-size: 0.78rem;
+   margin: 0.8rem auto 1.2rem;
+   overflow-wrap: break-word;
+   word-wrap: break-word;
+ }
+ thead {
+   display: table-header-group;
+   vertical-align: middle;
+ }
+ tr {
+   display: table-row;
  }
  thead tr {
    @apply rounded-lg text-sm font-medium text-gray-700 text-left;
-   font-size: 0.9674rem;
  }
  tr th {
-   @apply px-4 py-2 bg-gray-200;
-   background-color: #f8f8f8;
+  border: 1px solid rgba(0,0,0,0.1);
+  padding: 5px 1vw;
+  text-align: left;   
  }
  tbody {
    @apply text-sm font-normal text-gray-700;
+   display: table-row-group;
+   vertical-align: middle;
+   box-sizing: border-box;
  }
  tbody tr {
    @apply border-b border-gray-200 py-10 text-left;
@@ -96,10 +110,15 @@ a:visited.text-white{
    @apply bg-gray-400;
  }
  tr td {
-   @apply px-4 py-4;
+   display: table-cell;
+   border: 1px solid rgba(0,0,0,0.1);
+   padding: 5px 1vw;
  }
  td {
-   min-width: 30%;
+   min-width: 7rem;
+ }
+ .table-wrapper {
+   @apply max-w-xs overflow-x-auto;
  }
 .body-container {
   @apply  h-screen grid;
@@ -177,7 +196,7 @@ a:visited.text-white{
   .article-container {
     @apply max-w-sm;
   }
-  table {
+  .table-wrapper {
     @apply max-w-md;
   }
 }
@@ -194,8 +213,8 @@ a:visited.text-white{
   pre {
     @apply max-w-none;
   }
-  table {
-    @apply max-w-none overflow-x-auto;
+  .table-wrapper {
+    @apply max-w-none;
   }
 }
 
